--- a/Pages/Disaster/AllocationEvacuationCenter.cshtml
+++ b/Pages/Disaster/AllocationEvacuationCenter.cshtml
@@ -19,49 +19,55 @@
                 <h1>Allocate Evacuation Center</h1>
             </div>
         </div>
-
-        <div class="row pt-5">
-            <div class="col">
-                <div class="search-container">
-                    <div class="input-group">
-                        <input type="search" class="form-control ds-input" id="search-bar" placeholder="Search here..." aria-label="Search..." autocomplete="off" role="combobox" aria-autocomplete="list" aria-expanded="false" aria-owns="algolia-autocomplete-listbox-0" dir="auto" style="position: relative; vertical-align: top;">
-                        <button type="submit" class="btn btn-primary"><i class="bi bi-search"></i></button>
+        <form method="POST" action="/YourServerEndpoint">
+            <div class="row pt-4">
+                <div class="col">
+                    <div class="search-container">
+                        <div class="input-group">
+                            <input type="search" class="form-control ds-input" id="search-bar" name="search" placeholder="Search here..." aria-label="Search..." autocomplete="off" role="combobox" aria-autocomplete="list" aria-expanded="false" aria-owns="algolia-autocomplete-listbox-0" dir="auto" style="position: relative; vertical-align: top;">
+                            <button type="submit" class="btn btn-primary"><i class="bi bi-search"></i></button>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
 
-        <div class="row pt-6">
-            <div class="table-responsive">
+            <div class="row pt-4">
+                <div class="table-responsive">
+                    <table class="table align-middle table-hover" style="width:100%">
+                        <thead>
+                            <tr>
+                                <th></th>
+                                <th>Evacuation Center</th>
+                                <th>Evacuation Center Type</th>
+                                <th>Max Capacity</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <!-- SAMPLE DATA-->
+                            <tr>
+                                <td>
+                                    <div class="form-check">
+                                        <input class="form-check-input" type="checkbox" value="" id="evacuationCenter" name="selectedEvacuationCenters[]">
+                                        <!--selectedEvacuationCenters[] to collect selected centers as an array when the form is submitted.-->
+                                        <label class="form-check-label"></label>
+                                    </div>
+                                </td>
+                                <td>Bayanihan Gymnasium</td>
+                                <td>Community-Based Evacuation Center</td>
+                                <td>800</td>
+                            </tr>
+                            <!-- Add more rows as needed -->
+                        </tbody>
+                    </table>
 
-                <table class="table align-middle table-hover " style="width:100%">
-                    <tr>
-                        <th> </th>
-                        <th>Evacuation Center</th>
-                        <th>Evacuation Center Type<i class="bi bi-arrow-down-circle" style="padding: 5px;"></i></th>
-                        <th>Max Capacity<i class="bi bi-arrow-down-circle" style="padding: 5px;"></i></th>
-                    </tr>
-
-                    <!-- SAMPLE DATA-->
-                    <tr>
-                        <td width="10%">
-                            <div class="form-check">
-                                <input class="form-check-input" type="checkbox" value="" id="evacuationCenter1">
-                                <label class="form-check-label" for="evacuationCenter1"></label>
-                            </div>
-                        </td>
-                        <td width="20%">Bayanihan Gymnasium</td>
-                        <td width="20%">Community-Based Evacuation Center</td>
-                        <td width="10%">800</td>
-                    </tr>
-                </table>
-
-                <!-- Cancel and Save Button -->
-                <div class="button-spacer">
-                    <button class="btn btn-outline-secondary mr-10">Cancel</button>
-                    <button type="submit" class="btn btn-primary">Submit</button>
+                    <!-- Cancel and Save Button -->
+                    <div class="button-spacer">
+                        <a class="btn btn-outline-secondary mr-10" href="/CancelPage">Cancel</a>
+                        <button type="submit" class="btn btn-primary" name="saveSelection">Save Selection</button>
+                    </div>
                 </div>
             </div>
-        </div>
+        </form>
+
     </div>
 </div>
