--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -55,8 +55,8 @@
                         </li>
 
                         <li class="nav-item">
-                            <a asp-area="" asp-page="#">
-                                <img src="~/sample-pic.jpg" alt="User Profile" class="rounded-circle" style="max-height: 35px; width: auto; margin-left:7px;">
+                            <a href="#" class="profile">
+                                <img src="~/sample-pic.jpg" alt="User Profile">
                             </a>
                         </li>
                     </ul>
