--- a/Pages/Disaster/Index.cshtml
+++ b/Pages/Disaster/Index.cshtml
@@ -5,7 +5,6 @@
 }
 
 <style>
-	/* Remove underline */
 	a {
 		text-decoration: none;
 		color: inherit;
@@ -29,7 +28,6 @@
 			</form>
 		</div>
 	</div>
-
 
 	<div class="row pt-4">
 		<div class="col">
@@ -95,6 +93,7 @@
 <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
 <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 <script>
+	// Sort by
 	let lastClickedHeader = null;
 
 	function toggleArrowIcons(header) {
