Added Search for UserMgmt

--- a/Pages/EvacuationCenter/Index.cshtml
+++ b/Pages/EvacuationCenter/Index.cshtml
@@ -20,6 +20,8 @@
 					<li class="breadcrumb-item active" aria-current="page" style="color: #3F8F8B;"><strong>Evacuation Center</strong></li>
 				</ol>
 			</div>
+
+			<!-- Search Bar -->
 			<form id="search-form">
 				<div class="input-group">
 					<input type="search" class="form-control ds-input" id="search-bar" placeholder="Search here..." aria-label="Search..." autocomplete="off" role="combobox" aria-autocomplete="list" aria-expanded="false" aria-owns="algolia-autocomplete-listbox-0" dir="auto" style="position: relative; vertical-align: top;">
