--- a/Pages/Disaster/Entry Log.cshtml
+++ b/Pages/Disaster/Entry Log.cshtml
@@ -14,10 +14,15 @@
 <ul class="nav nav-tabs nav-justified">
     <li class="nav-item">
         <a class="nav-link active" aria-current="page" href="#">Entry Log</a>
+
+
+
     </li>
 
     <li class="nav-item nav-justified">
         <a class="nav-link" href="#">Staff Assignment</a>
+
+
     </li>
 
     <li class="nav-item nav-justified">
@@ -33,3 +38,13 @@
     </li>
 
 </ul>
+
+<div id="myTabContent" class="tab-content">
+    <div class="tab-pane fade show active" id="home" role="tabpanel">
+    <p>
+        dafdfadf
+    </p>
+    </div>
+
+
+</div>
