--- a/Pages/Disaster/Index.cshtml
+++ b/Pages/Disaster/Index.cshtml
@@ -5,7 +5,6 @@
 }
 
 <style>
-	/* Remove underline */
 	a {
 		text-decoration: none;
 		color: inherit;
@@ -79,8 +78,10 @@
 							</a>
 							
 							<!-- Delete button -->
-							<a class="btn btn-danger edit-button" href="#" onclick="confirmDelete('@item.disasterID')">
+							<a href="#" class="btn btn-danger edit-button" data-bs-toggle="modal" data-bs-target="#deleteConfirmationModal" data-disasterid="@item.disasterID">
 								<i class="bi bi-trash-fill"></i>
+							</a>
+
 						</td>
 					</tr>
 				}
@@ -89,14 +90,45 @@
 	</div>
 </div>
 
+<!-- Modal -->
+<div class="modal" id="deleteConfirmationModal" tabindex="-1">
+	<div class="modal-dialog">
+		<div class="modal-content">
+			<div class="modal-header">
+				<h5 class="modal-title">Confirm Delete</h5>
+				<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+			</div>
+			<div class="modal-body">
+				Are you sure you want to delete this disaster?
+			</div>
+			<div class="modal-footer">
+				<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+				<button type="button" class="btn btn-danger" id="confirmDeleteButton">Delete</button>
+			</div>
+		</div>
+	</div>
+</div>
+
 <script>
-	function confirmDelete(disasterID) {
-		if (confirm("Are you sure you want to delete this disaster?")) {
-			window.location.href = "/Disaster/DeleteDisaster?disasterID=" + disasterID;
+	const confirmDeleteButton = document.getElementById('confirmDeleteButton');
+	const deleteButtons = document.querySelectorAll('.edit-button');
+
+	let disasterIdToDelete = null;
+
+	deleteButtons.forEach(function (button) {
+		button.addEventListener('click', function () {
+			disasterIdToDelete = this.getAttribute('data-disasterid');
+		});
+	});
+
+	confirmDeleteButton.addEventListener('click', function () {
+		if (disasterIdToDelete !== null) {
+			window.location.href = "/Disaster/DeleteDisaster?disasterID=" + disasterIdToDelete;
 		}
-	}
+	});
 </script>
 
+<!--Sorting-->
 <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
 <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 <script>
