--- a/Pages/UserManagement/Index.cshtml
+++ b/Pages/UserManagement/Index.cshtml
@@ -96,7 +96,7 @@
                                 </a>
                             }
 
-                            <a href="#" onclick="confirmDelete('@item.userID')" class="btn btn-danger edit-button">
+                            <a href="#" class="btn btn-danger edit-button" data-bs-toggle="modal" data-bs-target="#deleteConfirmationModal" data-userid="@item.userID">
                                 <i class="bi bi-trash-fill"></i>Delete
                             </a>
 
@@ -108,11 +108,41 @@
     </div>
 </div>
 
+<!-- Modal -->
+<div class="modal" id="deleteConfirmationModal" tabindex="-1">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title">Delete this user</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                Are you sure you want to delete this user?
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                <button type="button" class="btn btn-danger" id="confirmDeleteButton">Delete</button>
+            </div>
+        </div>
+    </div>
+</div>
+
 <script>
-    function confirmDelete(userID) {
-        if (confirm("Are you sure you want to delete this user?")) {
-            window.location.href = "/UserManagement/DeleteUser?userID=" + userID;
+    const confirmDeleteButton = document.getElementById('confirmDeleteButton');
+    const deleteButtons = document.querySelectorAll('.edit-button');
+
+    let userIdToDelete = null;
+
+    deleteButtons.forEach(function (button) {
+        button.addEventListener('click', function () {
+            userIdToDelete = this.getAttribute('data-userid');
+        });
+    });
+
+    confirmDeleteButton.addEventListener('click', function () {
+        if (userIdToDelete !== null) {
+            window.location.href = "/UserManagement/DeleteUser?userID=" + userIdToDelete;
         }
-    }
+    });
 </script>
 
