--- a/Pages/EvacuationCenter/Index.cshtml
+++ b/Pages/EvacuationCenter/Index.cshtml
@@ -88,9 +88,10 @@
 							</a>
 
 							<!-- Delete button -->
-							<a class="btn btn-danger edit-button" href="#" onclick="confirmDelete('@item.centerID')">
-								<i class="bi bi-trash-fill"></i>
+							<a href="#" class="btn btn-danger edit-button" data-bs-toggle="modal" data-bs-target="#deleteEvacuationCenterModal" data-centerid="@item.centerID">
+								<i class="bi bi-trash-fill"></i>Delete
 							</a>
+
 						</td>
 					</tr>
 				}
@@ -98,6 +99,35 @@
 		</table>
 	</div>
 </div>
+
+<!-- Modal -->
+<div class="modal fade" id="deleteEvacuationCenterModal" tabindex="-1" role="dialog" aria-labelledby="deleteEvacuationCenterModalLabel" aria-hidden="true">
+	<div class="modal-dialog" role="document">
+		<div class="modal-content">
+			<div class="modal-header">
+				<h5 class="modal-title" id="deleteEvacuationCenterModalLabel">Confirm Deletion</h5>
+				<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+			</div>
+			<div class="modal-body">
+				<p>Are you sure you want to delete this evacuation center?</p>
+				<input type="hidden" id="deleteCenterID" />
+			</div>
+			<div class="modal-footer">
+				<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+				<button type="button" class="btn btn-danger" onclick="confirmDelete()">Delete</button>
+			</div>
+		</div>
+	</div>
+</div>
+
+<script>
+	function confirmDelete(centerID) {
+		if (confirm("Are you sure you want to delete this evacuation center?")) {
+			window.location.href = "/EvacuationCenter/DeleteEvacuationCenter?centerID=" + centerID;
+		}
+	}
+</script>
+
 
 <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
 <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
