--- a/Pages/Disaster/Index.cshtml
+++ b/Pages/Disaster/Index.cshtml
@@ -93,7 +93,7 @@
 	</div>
 </div>
 
-<!-- Modal -->
+<!-- Modal: Confirm Delete -->
 <div class="modal" id="deleteConfirmationModal" tabindex="-1">
 	<div class="modal-dialog">
 		<div class="modal-content">
@@ -112,6 +112,7 @@
 	</div>
 </div>
 
+<!-- Confirm Delete -->
 <script>
 	const confirmDeleteButton = document.getElementById('confirmDeleteButton');
 	const deleteButtons = document.querySelectorAll('.edit-button');
@@ -131,7 +132,7 @@
 	});
 </script>
 
-<!--Sorting-->
+<!-- Sorting -->
 <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
 <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 <script>
@@ -162,15 +163,10 @@
 		// Update the last clicked header
 		lastClickedHeader = header;
 	}
+</script>
 
-	// Confirm to delete
-	function confirmDelete(disasterID) {
-		if (confirm("Are you sure you want to delete this disaster?")) {
-			window.location.href = "/Disaster/DeleteDisaster?disasterID=" + disasterID;
-		}
-	}
-
-	// Search function
+<!-- Search -->
+<script>
 	document.addEventListener("DOMContentLoaded", function () {
 		document.getElementById("search-form").addEventListener("submit", function (e) {
 			e.preventDefault();
@@ -185,25 +181,25 @@
 					// Iterate through the search results and add new rows to the table
 					data.forEach(result => {
 						const newRow = `<tr>
-								<td width="20%">${result.disasterName}</td>
-								<td width="15%">${result.disasterType}</td>
-								<td width="25%">${result.description}</td>
-								<td width="15%">${result.dateOccured}</td>
-								<td width="20%">
-									<!-- Generate Report button -->
-									<button class="btn btn-primary"><i class="bi bi-file-earmark-post"></i></button>
+									<td width="20%">${result.disasterName}</td>
+									<td width="15%">${result.disasterType}</td>
+									<td width="25%">${result.description}</td>
+									<td width="15%">${result.dateOccured}</td>
+									<td width="20%">
+										<!-- Generate Report button -->
+										<button class="btn btn-primary"><i class="bi bi-file-earmark-post"></i></button>
 
-									<!-- Edit button -->
-									<a class="btn btn-success edit-button" href="/Disaster/EditDisaster?disasterID=${result.disasterID}">
-										<i class="bi bi-pencil-fill"></i>
-									</a>
+										<!-- Edit button -->
+										<a class="btn btn-success edit-button" href="/Disaster/EditDisaster?disasterID=${result.disasterID}">
+											<i class="bi bi-pencil-fill"></i>
+										</a>
 
-									<!-- Delete button -->
-									<a class="btn btn-danger edit-button" href="#" onclick="confirmDelete(${result.disasterName})">
-										<i class="bi bi-trash-fill"></i>
-									</a>
-								</td>
-							</tr>`;
+										<!-- Delete button -->
+										<a class="btn btn-danger edit-button" href="#" onclick="confirmDelete(${result.disasterName})">
+											<i class="bi bi-trash-fill"></i>
+										</a>
+									</td>
+								</tr>`;
 						tableBody.innerHTML += newRow;
 					});
 				})
