--- a/Pages/Disaster/Index.cshtml
+++ b/Pages/Disaster/Index.cshtml
@@ -55,7 +55,7 @@
 					<th>Description</th>
 					<th>
 						<a asp-page="./Index" asp-route-sortBy="dateOccured" asp-route-sortOrder="@(Model.SortBy == "dateOccured" && Model.SortOrder == "asc" ? "desc" : "asc")" onclick="toggleArrowIcons('dateOccured')">
-							Disaster Name
+							Date Occured
 							<ion-icon id="dateOccuredArrow" name="@(Model.SortBy == "dateOccured" && Model.SortOrder == "asc" ? "arrow-up-outline" : "arrow-down-outline")"></ion-icon>
 						</a>
 					</th>
@@ -109,18 +109,12 @@
 		const statusArrow = document.getElementById('statusArrow');
 
 		// Determine which header was clicked and toggle the arrow icons accordingly
-		if (header === 'centerName') {
-			centerNameArrow.style.display = centerNameArrow.style.display === 'none' ? 'block' : 'none';
-			maxCapacityArrow.style.display = 'none';
-			statusArrow.style.display = 'none';
-		} else if (header === 'maxCapacity') {
-			centerNameArrow.style.display = 'none';
-			maxCapacityArrow.style.display = maxCapacityArrow.style.display === 'none' ? 'block' : 'none';
-			statusArrow.style.display = 'none';
-		} else if (header === 'status') {
-			centerNameArrow.style.display = 'none';
-			maxCapacityArrow.style.display = 'none';
-			statusArrow.style.display = statusArrow.style.display === 'none' ? 'block' : 'none';
+		if (header === 'disasterName') {
+			disasterNameArrow.style.display = disasterNameArrow.style.display === 'none' ? 'block' : 'none';
+			dateOccuredArrow.style.display = 'none';
+		} else if (header === 'dateOccured') {
+			disasterNameArrow.style.display = 'none';
+			dateOccuredArrow.style.display = statusArrow.style.display === 'none' ? 'block' : 'none';
 		}
 
 		// Update the last clicked header
