--- a/Pages/EvacuationCenter/Index.cshtml
+++ b/Pages/EvacuationCenter/Index.cshtml
@@ -97,7 +97,7 @@
 							</a>
 
 							<!-- Delete button -->
-							<a href="#" class="btn btn-danger edit-button" data-bs-toggle="modal" data-bs-target="#deleteConfirmationModal" data-deleteid="@item.centerID">
+							<a href="#" class="btn btn-danger edit-button delete-button" data-bs-toggle="modal" data-bs-target="#deleteConfirmationModal" data-deleteid="@item.centerID">
 								<i class="bi bi-trash-fill"></i>
 							</a>
 						</td>
@@ -195,7 +195,7 @@
 											</a>
 
 											<!-- Delete button -->
-											<a href="#" class="btn btn-danger edit-button" data-bs-toggle="modal" data-bs-target="#deleteConfirmationModal" data-deleteid="${result.centerID}">
+											<a href="#" class="btn btn-danger edit-button delete-button" data-bs-toggle="modal" data-bs-target="#deleteConfirmationModal" data-deleteid="${result.centerID}">
 												<i class="bi bi-trash-fill"></i>
 											</a>
 										</td>
@@ -213,17 +213,24 @@
 <!-- Confirm Delete -->
 <script>
 	const confirmDeleteButton = document.getElementById('confirmDeleteButton');
-	const deleteButtons = document.querySelectorAll('.edit-button');
+	const tableBody = document.querySelector("table tbody");
 
 	let centerIdToDelete = null;
 
-	deleteButtons.forEach(function (button) {
-		button.addEventListener('click', function () {
-			centerIdToDelete = this.getAttribute('data-deleteid');
-		});
+	tableBody.addEventListener('click', function (event) {
+		const target = event.target;
+
+		if (target.classList.contains('delete-button')) {
+			centerIdToDelete = target.getAttribute('data-deleteid');
+			console.log("Clicked delete button. Center ID to delete: " + centerIdToDelete);
+
+			const deleteConfirmationModal = new bootstrap.Modal(document.getElementById('deleteConfirmationModal'));
+			deleteConfirmationModal.show();
+		}
 	});
 
 	confirmDeleteButton.addEventListener('click', function () {
+		console.log("Confirm delete button clicked. Center ID to delete: " + centerIdToDelete);
 		if (centerIdToDelete !== null) {
 			window.location.href = "/EvacuationCenter/DeleteEvacuationCenter?centerID=" + centerIdToDelete;
 		}
