--- a/Pages/EvacuationCenter/Index.cshtml
+++ b/Pages/EvacuationCenter/Index.cshtml
@@ -212,7 +212,7 @@
 	});
 </script>
 
-<!-- JavaScript for handling the modal and delete confirmation -->
+<!-- Confirm Delete -->
 <script>
 	const deleteButtons = document.querySelectorAll('.edit-button');
 	let centerIdToDelete = null;
