--- a/Pages/UserManagement/EditAdmin.cshtml
+++ b/Pages/UserManagement/EditAdmin.cshtml
@@ -16,7 +16,7 @@
     <div class="container mt-4 form-container-content">
         <div class="row">
             <div class="col text-center">
-                <h1>Add New User</h1>
+                <h1>Edit Admin User</h1>
                 <h6 class="text-dark">Admin</h6>
             </div>
         </div>
