--- a/Pages/UserManagement/EditECStaff.cshtml
+++ b/Pages/UserManagement/EditECStaff.cshtml
@@ -24,7 +24,7 @@
     <div class="container mt-4 form-container-content">
         <div class="row">
             <div class="col text-center">
-                <h1>Add New User</h1>
+                <h1>Edit EC Staff User</h1>
                 <h6 class="text-dark">EC Staff</h6>
             </div>
         </div>
